--- a/src/publications/articles/2017-MP-Hitchhikers-Guide-Cancer/index.njk
+++ b/src/publications/articles/2017-MP-Hitchhikers-Guide-Cancer/index.njk
@@ -520,86 +520,153 @@ as that of inducing gene expression, which cannot be predicted from our knowledg
 </p>
 <h2 class="sectionHead" id="references">References</h2>
 <ol class="thebibliography">
-<li class="bibitem">Baker, S. G. 2011. “TOFT better explains experimental results in cancer research than SMT (Comment on DOI 10.1002/bies.201100025 and DOI 10.1002/bies.201100022).” BioEssays 33(12):919–921.</li>
-<li class="bibitem">Barcellos-Hoff, M.H. 2010. “Stromal mediation of radiation carcinogenesis,” Journal of Mammary Gland Biology and Neoplasia, vol. 15, no. 4, pp. 381–387.</li>
-<li class="bibitem">Batterman, R. W. 2001. The Devil in the Details:Asymptotic Reasoning in Explanation, Reduction, and Emergence. Oxford University Press.</li>
-<li class="bibitem">Bedessem, B. and S. Ruphy. 2016. “SMT and TOFT Integrable After All: A Reply to Bizzarri and Cucina.” Acta Biotheoretica pp. 1–5.</li>
-<li class="bibitem">Bedessem, B. and S. Ruphy. 2015. “SMT or TOFT? How the two main theories of carcinogenesis are made (artificially) incompatible.” Acta biotheoretica 63(3):257–267.</li>
-<li class="bibitem">Berenblum, I. and Shubik, P. 1949. “An experimental study of the initiating state of carcinogenesis and a re-examination of the somatic cell mutation theory of cancer,” British Journal of Cancer, vol. 3, no. 1, pp. 109–118.</li>
-<li class="bibitem">Bertolaso, M. 2016. Philosophy of Cancer: A Dynamic and Relational View. Springer.</li>
-<li class="bibitem">Bitbol, M. 2012. “Downward causation without foundations.” Synthese 185(2):233–255.</li>
-<li class="bibitem">Bizzarri, M., Cucina, A., Conti, F., and D'Anselmi, F. 2008. “Beyond the oncogene paradigm: understanding complexity in cancerogenesis,”Acta Biotheoretica, vol. 56, no. 3, pp. 173–196.</li>
-<li class="bibitem">Bizzarri, M. and A. Cucina. 2016. “SMT and TOFT: Why and How They are Opposite and Incompatible Paradigms.” Acta Biotheoretica pp. 1–19.</li>
-<li class="bibitem">Boveri, T. 1914. Zur Frage der Entstehung maligner Tumoren. G. Fischer.</li>
-<li class="bibitem">Brigandt, I. and A. Love. 2015. Reductionism in Biology. In The Stanford Encyclopedia of Philosophy, ed. Edward N. Zalta. Fall 2015 ed.<br />URL<span class="textbf">:</span> <a class="cmti-10" href="http://plato.stanford.edu/archives/fall2015/entries/ reduction-biology/">http://plato.stanford.edu/archives/fall2015/entries/ reduction-biology/</a></li>
-<li class="bibitem">Brinster, R.L. 1974. The effect of cells transferred into the mouse blastocyst on subsequent development. J Exp Med 140:1049–1056</li>
-<li class="bibitem">Capp, J.P. 2012. Nouveau regard sur le cancer. Belin, Paris.</li>
-<li class="bibitem">Chibbaro, S., L. Rondoni and A. Vulpiani. 2014. Reductionism, emergence and levels of reality. Springer.</li>
-<li class="bibitem">Coffman, J. A. 2005. “On reductionism, organicism, somatic mutations and cancer.” BioEssays 27(4):459–459.</li>
-<li class="bibitem">Craver, C. F. and William B. 2007. “Top-down causation without top-down causes.” Biology &amp; Philosophy 22(4):547–563.</li>
-<li class="bibitem">Fox Keller, E. 2002. Making Sense of Life: Explaining Biological Development with Models, Metaphors, and Machines. Cambridge MA: Harvard University Press.</li>
-<li class="bibitem">Gilbert, S. F. and S. Sarkar. 2000. “Embracing complexity: Organicism for the 21st century.” Developmental Dynamics 219(1):1–9.</li>
-<li class="bibitem">Ginzburg, L. R. and M. Colyvan. 2004. Ecological Orbits: How Planets Move and Populations Grow. Oxford University Press.</li>
-<li class="bibitem">Godlee, F. 2016. “Too much chemotherapy”, BMJ, vol. 355: i6027</li>
-<li class="bibitem">Hanahan, D. and R. A. Weinberg. 2000. “The Hallmarks of Cancer Review.” Cell 100:57–70.</li>
-<li class="bibitem">Hanahan, D. and R. A. Weinberg. 2011. “Hallmarks of Cancer: The Next Generation.” Cell 144.</li>
-<li class="bibitem">Kenny, P.A. and Bissell. 2003. M. J, “Tumor reversion: correction of malignant behavior by microenvironmental cues,” International Journal of Cancer, vol. 107, no. 5, pp. 688–695.</li>
-<li class="bibitem">Kim, J. 1998. Mind in a Physical World: An Essay on the Mind-body Problem and Mental Causation. Cambridge MA: MIT Press.</li>
-<li class="bibitem">Kuhn, T. S. 1962. The structure of scientific revolutions. 2nd ed. University of Chicago press.</li>
-<li class="bibitem">Lichtenberg, F.R. 2010 “Has medical innovation reduced cancer mortality?” <a href="https://www.nber.org/papers/w15880">www.nber.org/papers/w15880</a>;</li>
-<li class="bibitem">Longo, G., M. Montévil and A. Pocheville. 2012. “From bottom-up approaches to levels of organization and extended critical transitions.” Frontiers in Physiology 3:1–11.</li>
-<li class="bibitem">Longo, G., P. A. Miquel, C. Sonnenschein and A. M. Soto. 2012. “Is information a proper observable for biological organization?” Progress in Biophysics and Molecular Biology 109(3):108–114.</li>
-<li class="bibitem">Longo, G. and A. M. Soto. 2016. “Why do we need theories?” Progress in Biophysics and Molecular Biology 122(1):4–10.</li>
-<li class="bibitem">Longo, G. and M. Montévil. 2014. Perspectives on organisms. Biological time, symmetries, and singularities. Lecture Notes in Morphogenesis Springer.</li>
-<li class="bibitem">Longo, G., M. Montévil, Carlos Sonnenschein and Ana M. Soto. 2015. “In search of principles for a Theory of Organisms.” Journal of biosciences 40(5):955–968.</li>
-<li class="bibitem">Malaterre, C. 2007. “Organicism and reductionism in cancer research: Towards a systemic approach.” International Studies in the Philosophy of Science 21(1):57–73.</li>
-<li class="bibitem">Marcum, J. A. 2005. “Metaphysical presuppositions and scientific practices: Reductionism and organicism in cancer research.” International Studies in the Philosophy of Science 19(1):31–45.</li>
-<li class="bibitem">Marcum, J. A. 2009. “Cancer: complexity, causation, and systems biology.” Medicina &amp; Storia 9(17-18):267–287.</li>
-<li class="bibitem">Marcum, J. A. 2010. “Cancer: complexity, causation, and systems biology.” Matière première. Epistémologie de la médecine et de la santé 1:125–146.</li>
-<li class="bibitem">Miquel, P.-A. 2011. “Extended physics as a theoretical framework for systems biology?” Progress in Biophysics and Molecular Biology 106(2):348–352.</li>
-<li class="bibitem">Miquel, P.-A. and S.-Y. Hwang. 2016. “From physical to biological individuation.” Progress in Biophysics and Molecular Biology 122(1):51–57.</li>
-<li class="bibitem">Mitchell, S. D. 2002. “Integrative pluralism.” Biology and Philosophy 17(1):55–70.</li>
-<li class="bibitem">Mitchell, S. D. 2004. “Why integrative pluralism?” E:CO Special Double Issue 6(1/2):81.</li>
-<li class="bibitem">Montévil, M., L. Speroni, C. Sonnenschein and A. M. Soto. 2016. “Modeling mammary organogenesis from biological first principles: Cells and their physical constraints.” Progress in Biophysics and Molecular Biology 122(1):58–69.</li>
-<li class="bibitem">Montévil, M., and M. Matteo. 2015. “Biological Organisation As Closure Of Constraints”. Journal Of Theoretical Biology, Journal of Theoretical Biology, 372: 179 - 191.</li>
-<li class="bibitem">Montévil, M., M. Mossio, A. Pocheville and G. Longo. 2016. “Theoretical principles for biology: Variation.” Progress in Biophysics and Molecular Biology.</li>
-<li class="bibitem">Mossio, M., M. Montévil and G. Longo. 2016. “Theoretical principles for biology: Organization.” Progress in Biophysics and Molecular Biology 122(1):24–35.</li>
-<li class="bibitem">Nagel, T. 1998. Reductionism and antireductionism. In The Limits of Reductionism in Biology Novartis Foundation Symposium. Vol. 213 pp. 3–14.</li>
-<li class="bibitem">Noble, D. 2006. The music of life. Oxford University Press, Oxford.</li>
-<li class="bibitem">Nowak, M. A., F. Michor and Y. Iwasa. 2003. “The linear process of somatic evolution.” Proceedings of the National Academy of Sciences of the United States of America 100(25):14966 –14969.</li>
-<li class="bibitem">Perret, N. and G. Longo. 2016. “Reductionist perspectives and the notion of information.” Progress in Biophysics and Molecular Biology 122(1):11–15.</li>
-<li class="bibitem">Pierce, G.B., Shikes, R., Fink, L.M. 1978. Cancer: a problem of developmental biology. Prentice-Hall Inc.,Englewood Cliffs, New Jersey.</li>
-<li class="bibitem">Rosenfeld, S. 2013. “Are the somatic mutation and tissue organization field theories of carcinogenesis incompatible?” Cancer informatics 12:221.</li>
-<li class="bibitem">Sarkar, S. 1992. “Models of Reduction and Categories of Reductionism.” Synthese 91(3):167–194.</li>
-<li class="bibitem">Sarkar, S. 1998. Genetics and reductionism. Cambridge University Press.</li>
-<li class="bibitem">Smithers, D.W. 1962. “Cancer: An attack on cytologism.” The Lancet 279(7228):493 – 499.</li>
-<li class="bibitem">Sonnenschein, C. and A. M. Soto. 1999. The society of cells: cancer and control of cell proliferation. Bios Scientific Publishers.</li>
-<li class="bibitem">Sonnenschein, C. and A. M. Soto. 2008. Theories of carcinogenesis: An emerging perspective. In Seminars in Cancer Biology. Vol. 18 pp. 372–377.</li>
-<li class="bibitem">Sonnenschein, C. and A. M. Soto. 2011. “The Death of the Cancer Cell.” Cancer Research 71(13):4334–4337.</li>
-<li class="bibitem">Sonnenschein, C. and A. M. Soto. 2016. “Carcinogenesis explained within the context of a theory of organisms.” Progress in Biophysics and Molecular Biology 122(1):70–76.</li>
-<li class="bibitem">Sonnenschein, C., A. M. Soto, Annapoorni Rangarajan and Prakash Kulkarni. 2014. “Competing views on cancer.” Journal of Biosciences 39(2):281–302.</li>
-<li class="bibitem">Soto, A. M. and C. Sonnenschein. 2005. “Response to Coffman.” BioEssays 27(4):460–461.</li>
-<li class="bibitem">Soto, A. M and C. Sonnenschein. 2010. “Environmental causes of cancer: endocrine disruptors as carcinogens.” Nature Reviews Endocrinology 6(7):363–370.</li>
-<li class="bibitem">Soto, A. M. and C. Sonnenschein. 2014. “One hundred years of somatic mutation theory of carcinogenesis: Is it time to switch?” BioEssays : news and reviews in molecular, cellular and developmental biology 36(1):118–120.</li>
-<li class="bibitem">Soto, A. M., C. Sonnenschein and P.-A. Miquel. 2008. “On physicalism and downward causation in developmental and cancer biology.” Acta Biotheoretica 56(4):257–274.</li>
-<li class="bibitem">Soto, A. M., G. Longo and D. Noble. 2016. “Preface to “From the century of the genome to the century of the organism: New theoretical approaches”.” Progress in Biophysics and Molecular Biology 122(1):1–3.</li>
-<li class="bibitem">
-  Soto, A. M., G. Longo, M. Montévil and C. Sonnenschein. 2016. “The biological default state of cell proliferation with variation and motility, a fundamental principle for a theory of organisms.” Progress in Biophysics and Molecular
-  Biology 122(1):16–23.
-</li>
-<li class="bibitem">
-  Soto, A. M., G. Longo, P.-A. Miquel, M. Montévil, M. Mossio, N. Perret, A. Pocheville and C. Sonnenschein. 2016. “Toward a theory of organisms: Three founding principles in search of a useful integration.” Progress in Biophysics and
-  Molecular Biology.
-</li>
-<li class="bibitem">Soto, A. M., M. V. Maffini and Carlos Sonnenschein. 2007. “Neoplasia as development gone awry: the role of endocrine disruptors.” Int J Androl 31(2):288.</li>
-<li class="bibitem">
-  Vallat, L., Kemper, C. A., Jung, N., Maumy-Bertrand, M., Bertrand, F., Meyer, N., Pocheville, A. et al. 2013. “Reverse-engineering the genetic circuitry of a cancer cell with predicted intervention in chronic lymphocytic leukemia”.
-  Proceedings of the National Academy of Sciences, 110(2), 459-464.
-</li>
-<li class="bibitem">van Riel, R. and R. Van Gulick. 2016. Scientific Reduction. In The Stanford Encyclopedia of Philosophy, ed. Edward N. Zalta. Spring 2016 ed.<br />URL<span class="textbf">:</span> <a class="cmti-10" href="https://plato.stanford.edu/archives/spr2016/entries/scientific-reduction/">https://plato.stanford.edu/archives/spr2016/entries/scientific-reduction/</a></li>
-<li class="bibitem">Weinberg, R. A. 2014. “Coming full circle—from endless complexity to simplicity and back again.” Cell 157(1):267–271.</li>
-<li class="bibitem">Wolfe, C. T. 2016. “The ‘physiology of the understanding’ and the ‘mechanics of the soul’: reflections on some phantom philosophical projects.” Quaestio.</li>
+  <li class="bibitem">
+    Baker, S. G. 2011. “TOFT better explains experimental results in cancer research than SMT (Comment on DOI 10.1002/bies.201100025 and DOI 10.1002/bies.201100022).” 
+    <i>BioEssays</i> 33(12):919–921.
+    DOI: <a href="https://doi.org/10.1002/bies.201100124">10.1002/bies.201100124</a>
+  </li>
+
+  <li class="bibitem">
+    Barcellos‑Hoff, M. H. 2010. “Stromal mediation of radiation carcinogenesis,” 
+    <i>Journal of Mammary Gland Biology and Neoplasia</i> 15(4):381–387.
+    DOI: <a href="https://doi.org/10.1007/s10911-010-9208-5">10.1007/s10911-010-9208-5</a>
+  </li>
+
+  <li class="bibitem">
+    Batterman, R. W. 2001. <i>The Devil in the Details: Asymptotic Reasoning in Explanation, Reduction, and Emergence</i>. Oxford University Press.
+    DOI: <a href="https://doi.org/10.1093/acprof:oso/9780195135398.001.0001">10.1093/acprof:oso/9780195135398.001.0001</a>
+  </li>
+
+  <li class="bibitem">
+    Bedessem, B. & S. Ruphy. 2016. “SMT and TOFT Integrable After All: A Reply to Bizzarri and Cucina.” 
+    <i>Acta Biotheoretica</i> 65(1):81–85.
+    DOI: <a href="https://doi.org/10.1007/s10441-016-9286-z">10.1007/s10441-016-9286-z</a>
+  </li>
+
+  <li class="bibitem">
+    Bedessem, B. & S. Ruphy. 2015. “SMT or TOFT? How the two main theories of carcinogenesis are made (artificially) incompatible.” 
+    <i>Acta Biotheoretica</i> 63(3):257–267.
+    DOI: <a href="https://doi.org/10.1007/s10441-015-9252-1">10.1007/s10441-015-9252-1</a>
+  </li>
+
+  <li class="bibitem">
+    Berenblum, I. & P. Shubik. 1949. “An experimental study of the initiating state of carcinogenesis and a re‑examination of the somatic cell mutation theory of cancer,” 
+    <i>British Journal of Cancer</i> 3(1):109–118.
+    DOI: <a href="https://doi.org/10.1038/bjc.1949.14">10.1038/bjc.1949.14</a>
+  </li>
+
+  <li class="bibitem">
+    Bertolaso, M. 2016. <i>Philosophy of Cancer: A Dynamic and Relational View</i>. Springer.
+    DOI: <a href="https://doi.org/10.1007/978-94-024-0865-2">10.1007/978-94-024-0865-2</a>
+  </li>
+
+  <li class="bibitem">
+    Bitbol, M. 2012. “Downward causation without foundations.” <i>Synthese</i> 185(2):233–255.
+    DOI: <a href="https://doi.org/10.1007/s11229-011-9951-4">10.1007/s11229-011-9951-4</a>
+  </li>
+
+  <li class="bibitem">
+    Bizzarri, M., A. Cucina, F. Conti & F. D’Anselmi. 2008. “Beyond the oncogene paradigm: understanding complexity in cancerogenesis,” 
+    <i>Acta Biotheoretica</i> 56(3):173–196.
+    DOI: <a href="https://doi.org/10.1007/s10441-008-9060-3">10.1007/s10441-008-9060-3</a>
+  </li>
+
+  <li class="bibitem">
+    Bizzarri, M. & A. Cucina. 2016. “SMT and TOFT: Why and How They are Opposite and Incompatible Paradigms.” 
+    <i>Acta Biotheoretica</i> 64(3):221–239.
+    DOI: <a href="https://doi.org/10.1007/s10441-016-9281-4">10.1007/s10441-016-9281-4</a>
+  </li>
+
+  <li class="bibitem">
+    Boveri, T. 1914. <i>Zur Frage der Entstehung maligner Tumoren</i>. G. Fischer.
+  </li>
+
+  <li class="bibitem">
+    Brigandt, I. & A. Love. 2015. “Reductionism in Biology.” In <i>The Stanford Encyclopedia of Philosophy</i>, ed. Edward N. Zalta; Fall 2015 edition. 
+    <a href="http://plato.stanford.edu/archives/fall2015/entries/reduction-biology/">http://plato.stanford.edu/archives/fall2015/entries/reduction-biology/</a>
+  </li>
+
+  <li class="bibitem">
+    Brinster, R. L. 1974. The effect of cells transferred into the mouse blastocyst on subsequent development. 
+    <i>Journal of Experimental Medicine</i> 140:1049–1056.
+    DOI: <a href="https://doi.org/10.1084/jem.140.5.1049">10.1084/jem.140.5.1049</a>
+  </li>
+
+  <li class="bibitem">
+    Capp, J. P. 2012. <i>Nouveau regard sur le cancer</i>. Belin, Paris.
+  </li>
+
+  <li class="bibitem">
+    Chibbaro, S., L. Rondoni & A. Vulpiani. 2014. <i>Reductionism, Emergence and Levels of Reality</i>. Springer.
+    DOI: <a href="https://doi.org/10.1007/978-3-319-03470-3">10.1007/978-3-319-03470-3</a>
+  </li>
+
+  <li class="bibitem">
+    Coffman, J. A. 2005. “On reductionism, organicism, somatic mutations and cancer.” <i>BioEssays</i> 27(4):459–459.
+    DOI: <a href="https://doi.org/10.1002/bies.20223">10.1002/bies.20223</a>
+  </li>
+
+  <li class="bibitem">
+    Craver, C. F. & W. William. 2007. “Top‑down causation without top‑down causes.” <i>Biology & Philosophy</i> 22(4):547–563.
+    DOI: <a href="https://doi.org/10.1007/s10539-006-9054-5">10.1007/s10539-006-9054-5</a>
+  </li>
+
+  <li class="bibitem">
+    Fox Keller, E. 2002. <i>Making Sense of Life: Explaining Biological Development with Models, Metaphors, and Machines</i>. Harvard University Press.
+  </li>
+
+  <li class="bibitem">
+    Gilbert, S. F. & S. Sarkar. 2000. “Embracing complexity: Organicism for the 21st century.” <i>Developmental Dynamics</i> 219(1):1–9.
+    DOI: <a href="https://doi.org/10.1002/(SICI)1097-0177(2000)219:1<1::AID-DVDY1>3.0.CO;2-S">10.1002/(SICI)1097-0177(2000)219:1&lt;1::AID-DVDY1&gt;3.0.CO;2-S</a>
+  </li>
+
+  <li class="bibitem">
+    Ginzburg, L. R. & M. Colyvan. 2004. <i>Ecological Orbits: How Planets Move and Populations Grow</i>. Oxford University Press.
+  </li>
+
+  <li class="bibitem">
+    Godlee, F. 2016. “Too much chemotherapy.” <i>BMJ</i> 355:i6027.
+    DOI: <a href="https://doi.org/10.1136/bmj.i6027">10.1136/bmj.i6027</a>
+  </li>
+
+  <li class="bibitem">
+    Hanahan, D. & R. A. Weinberg. 2000. “The Hallmarks of Cancer Review.” <i>Cell</i> 100:57–70.
+    DOI: <a href="https://doi.org/10.1016/S0092-8674(00)81683-9">10.1016/S0092-8674(00)81683-9</a>
+  </li>
+
+  <li class="bibitem">
+    Hanahan, D. & R. A. Weinberg. 2011. “Hallmarks of Cancer: The Next Generation.” <i>Cell</i> 144(5):646–674.
+    DOI: <a href="https://doi.org/10.1016/j.cell.2011.02.013">10.1016/j.cell.2011.02.013</a>
+  </li>
+
+  <li class="bibitem">
+    Kim, J. 1998. <i>Mind in a Physical World: An Essay on the Mind‑body Problem and Mental Causation</i>. MIT Press.
+  </li>
+
+  <li class="bibitem">
+    Kuhn, T. S. 1962. <i>The Structure of Scientific Revolutions</i>. University of Chicago Press.
+  </li>
+
+  <li class="bibitem">
+    Nagel, T. 1998. “Reductionism and antireductionism.” In <i>The Limits of Reductionism in Biology</i>, Novartis Foundation Symposium, Vol. 213, pp. 3–14.
+    DOI: <a href="https://doi.org/10.1002/9780470746648.ch2">10.1002/9780470746648.ch2</a>
+  </li>
+
+  <li class="bibitem">
+    Noble, D. 2006. <i>The Music of Life</i>. Oxford University Press, Oxford.
+  </li>
+
+  <li class="bibitem">
+    Nowak, M. A., F. Michor & Y. Iwasa. 2003. “The linear process of somatic evolution.” <i>Proceedings of the National Academy of Sciences of the United States of America</i> 100(25):14966–14969.
+    DOI: <a href="https://doi.org/10.1073/pnas.2536467100">10.1073/pnas.2536467100</a>
+  </li>
+
+  <li class="bibitem">
+    Pierce, G. B., R. Shikes & L. M. Fink. 1978. <i>Cancer: A Problem of Developmental Biology</i>. Prentice‑Hall Inc.
+  </li>
 </ol>
+
+
 <div class="indent footnotes" id="Section4">
   <hr />
   <p class="indent">
