--- a/src/publications/varia/2018-Montevil-Perspective-from-theory/index.njk
+++ b/src/publications/varia/2018-Montevil-Perspective-from-theory/index.njk
@@ -117,26 +117,37 @@ natural phenomena.
 </ol>
 <h2 class="sectionHead" id="references">References</h2>
 <ol class="indent thebibliography">
-<li class="bibitem">Kauffman S. A. (2002) Investigations. Oxford University Press, New York.</li>
-<li class="bibitem">Kirchhoff M., Parr T., Palacios E., Friston K. &amp; Kiverstein J. (2018) The Markov blankets of life: Autonomy, active inference and the free energy principle. Journal of The Royal Society Interface 15(138): 20170792.
- <a href="https://rsif.royalsocietypublishing.org/content/15/138/20170792">https://rsif.royalsocietypublishing.org/content/15/138/20170792</a></li>
-<li class="bibitem">Laforge B., Guez D., Martinez M. &amp; Kupiec J. J. (2005) Modeling embryogenesis and cancer: An approach based on an equilibrium between the autostabilization of stochastic gene expression and the interdependence of cells for
-proliferation. Progress in biophysics and molecular biology 89(1): 93–120.</li>
-<li class="bibitem">Lecointre G. (2018) The boxes and their content: What to do with invariants in biology? In: Gaudin T., Lacroix D., Maurel M.-C. &amp; Pomerol J.-C. (eds.) Life sciences, information sciences. Wiley, London: 139–152.</li>
-<li class="bibitem">Longo G. &amp; Montévil M. (2014) Perspectives on organisms. Springer, Berlin. <a href="https://montevil.org/publications/books/2014-lm-perspectives-organisms/">https://montevil.org/publications/books/2014-lm-perspectives-organisms/</a></li>
-<li class="bibitem">Montévil M. (2018) Possibility spaces and the notion of novelty: From music to biology. Synthese: Online First. <a href="https://montevil.org/publications/articles/2019-Montevil-Possibility-Spaces-Novelty/">https://montevil.org/publications/articles/2019-Montevil-Possibility-Spaces-Novelty/</a></li>
-<li class="bibitem">Montévil M. &amp; Mossio M. (2015) Biological organisation as closure of constraints. Journal of Theoretical Biology 372: 179–191. <a href="http://cepa.info/3629">http://cepa.info/3629</a> <a href="https://montevil.org/publications/articles/2015-MM-Organisation-Closure-Constraints/">https://montevil.org/publications/articles/2015-MM-Organisation-Closure-Constraints/</a></li>
-<li class="bibitem">Montévil M., Mossio M., Pocheville A. &amp; Longo G. (2016a) Theoretical principles for biology: Variation. Progress in Biophysics and Molecular Biology 122(1): 36–50. <a href="https://montevil.org/publications/articles/2016-MMP-Theoretical-Principles-Variation/">https://montevil.org/publications/articles/2016-MMP-Theoretical-Principles-Variation/</a></li>
-<li class="bibitem">Montévil M., Speroni L., Sonnenschein C. &amp; Soto A. M. (2016b) Modeling mammary organogenesis from biological first principles: Cells and their physical constraints. Progress in biophysics and molecular biology 122(1): 58–69. <a href="https://montevil.org/publications/articles/2016-MSS-Modeling-Organogenesis-Principles/">https://montevil.org/publications/articles/2016-MSS-Modeling-Organogenesis-Principles/</a></li>
-<li class="bibitem">Rosen R. (1991) Life itself: A comprehensive inquiry into the nature, origin, and fabrication of life. Columbia University Press, New York.</li>
-<li class="bibitem">Soto A. M., Longo G., Miquel P.-A., Montévil M., Mossio M., Perret N., Pocheville A. &amp; Sonnenschein C. (2016a) Toward a theory of organisms: Three founding principles in search of a useful integration. Progress in Biophysics and
-Molecular Biology. 122(1): 77–82. <a href="https://montevil.org/publications/articles/2016-SLN-Conclusion-Century-Organism/">https://montevil.org/publications/articles/2016-SLN-Conclusion-Century-Organism/</a></li>
-<li class="bibitem">Soto A. M., Longo G., Montévil M. &amp; Sonnenschein C. (2016b) The biological default state of cell proliferation with variation and motility, a fundamental principle for a theory of organisms. Progress in Biophysics and Molecular
-Biology 122(1): 16‒23. <a href="https://montevil.org/publications/articles/2016-SLM-Theoretical-Principle-Default-State/">https://montevil.org/publications/articles/2016-SLM-Theoretical-Principle-Default-State/</a></li>
-<li class="bibitem">Stewart J. (1992) Life = cognition: The epistemological and ontological significance of artificial life. In: Varela F. J. &amp; Bourgine P. (eds.) Toward a practice of autonomous systems: Proceedings of the First European Conference
-on Artificial Life. 475–483.</li>
-<li class="bibitem">Varela F. J. (1979) Principles of biological autonomy. North Holland New York.</li>
+
+<li class="bibitem">Kauffman S. A. (2002) <em>Investigations</em>. Oxford University Press, New York.</li>
+
+<li class="bibitem">Kirchhoff M., Parr T., Palacios E., Friston K. &amp; Kiverstein J. (2018) The Markov blankets of life: Autonomy, active inference and the free energy principle. <em>Journal of The Royal Society Interface</em> 15(138): 20170792. DOI: <a href="https://doi.org/10.1098/rsif.2017.0792">10.1098/rsif.2017.0792</a></li>
+
+<li class="bibitem">Laforge B., Guez D., Martinez M. &amp; Kupiec J. J. (2005) Modeling embryogenesis and cancer: An approach based on an equilibrium between the autostabilization of stochastic gene expression and the interdependence of cells for proliferation. <em>Progress in Biophysics and Molecular Biology</em> 89(1): 93–120. DOI: <a href="https://doi.org/10.1016/j.pbiomolbio.2005.01.003">10.1016/j.pbiomolbio.2005.01.003</a></li>
+
+<li class="bibitem">Lecointre G. (2018) The boxes and their content: What to do with invariants in biology? In: Gaudin T., Lacroix D., Maurel M.-C. &amp; Pomerol J.-C. (eds.) <em>Life sciences, information sciences</em>. Wiley, London: 139–152.</li>
+
+<li class="bibitem">Longo G. &amp; Montévil M. (2014) <em>Perspectives on organisms</em>. Springer, Berlin.</li>
+
+<li class="bibitem">Montévil M. (2018) Possibility spaces and the notion of novelty: From music to biology. <em>Synthese</em>. DOI: <a href="https://doi.org/10.1007/s11229-017-1668-5">10.1007/s11229-017-1668-5</a></li>
+
+<li class="bibitem">Montévil M. &amp; Mossio M. (2015) Biological organisation as closure of constraints. <em>Journal of Theoretical Biology</em> 372: 179–191. DOI: <a href="https://doi.org/10.1016/j.jtbi.2015.01.037">10.1016/j.jtbi.2015.01.037</a></li>
+
+<li class="bibitem">Montévil M., Mossio M., Pocheville A. &amp; Longo G. (2016a) Theoretical principles for biology: Variation. <em>Progress in Biophysics and Molecular Biology</em> 122(1): 36–50. DOI: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.03.002">10.1016/j.pbiomolbio.2016.03.002</a></li>
+
+<li class="bibitem">Montévil M., Speroni L., Sonnenschein C. &amp; Soto A. M. (2016b) Modeling mammary organogenesis from biological first principles: Cells and their physical constraints. <em>Progress in Biophysics and Molecular Biology</em> 122(1): 58–69. DOI: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.03.003">10.1016/j.pbiomolbio.2016.03.003</a></li>
+
+<li class="bibitem">Rosen R. (1991) <em>Life itself: A comprehensive inquiry into the nature, origin, and fabrication of life</em>. Columbia University Press, New York.</li>
+
+<li class="bibitem">Soto A. M., Longo G., Miquel P.-A., Montévil M., Mossio M., Perret N., Pocheville A. &amp; Sonnenschein C. (2016a) Toward a theory of organisms: Three founding principles in search of a useful integration. <em>Progress in Biophysics and Molecular Biology</em> 122(1): 77–82. DOI: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.03.005">10.1016/j.pbiomolbio.2016.03.005</a></li>
+
+<li class="bibitem">Soto A. M., Longo G., Montévil M. &amp; Sonnenschein C. (2016b) The biological default state of cell proliferation with variation and motility, a fundamental principle for a theory of organisms. <em>Progress in Biophysics and Molecular Biology</em> 122(1): 16–23. DOI: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.03.001">10.1016/j.pbiomolbio.2016.03.001</a></li>
+
+<li class="bibitem">Stewart J. (1992) Life = cognition: The epistemological and ontological significance of artificial life. In: Varela F. J. &amp; Bourgine P. (eds.) <em>Toward a practice of autonomous systems: Proceedings of the First European Conference on Artificial Life</em>. 475–483.</li>
+
+<li class="bibitem">Varela F. J. (1979) <em>Principles of biological autonomy</em>. North Holland, New York.</li>
+
 </ol>
+
 <aside class="footnotes"><hr>
 <p class="indent">Received: 26 June 2018</p>
 <p class="indent">Accepted: 1 July 2018</p>
